<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_40sdp"
        android:background="@drawable/bg_white_radius"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <nat.pink.base.customView.ExtTextView
            android:id="@+id/ext_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center"
            android:text="@string/note"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp"
            app:textViewFontAssetName="@string/font_bold" />

        <nat.pink.base.customView.ExtTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_25sdp"
            android:gravity="center"
            android:text="@string/error_link_video"
            android:textColor="@color/color_404040"
            android:textSize="@dimen/_12sdp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:background="@color/color_E8E8E8" />

        <nat.pink.base.customView.ExtTextView
            android:id="@+id/txt_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/_15sdp"
            android:gravity="center"
            android:text="@string/ok"
            android:textAllCaps="true"
            android:textColor="@color/color_404040"
            android:textSize="@dimen/_16sdp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>