<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"

    android:orientation="vertical">

    <include
        android:id="@+id/layout_action_bar"
        layout="@layout/layout_action_bar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_14sdp">

            <nat.pink.base.customView.ExtTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/call_type"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp"
                app:textViewFontAssetName="@string/font_bold" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="horizontal">

                <nat.pink.base.customView.ExtTextView
                    android:id="@+id/txt_incoming_call"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_45sdp"
                    android:layout_marginEnd="@dimen/_4sdp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_button_call_on"
                    android:gravity="center"
                    android:paddingVertical="@dimen/_10sdp"
                    android:text="@string/incoming_call"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />

                <nat.pink.base.customView.ExtTextView
                    android:id="@+id/txt_calling"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:layout_marginEnd="@dimen/_45sdp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_button_call_off"
                    android:gravity="center"
                    android:paddingVertical="@dimen/_10sdp"
                    android:text="@string/calling"
                    android:textColor="@color/color_9E9E9E"
                    android:textSize="@dimen/_12sdp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <nat.pink.base.customView.ExtTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/name_your_friend"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp"
                app:textViewFontAssetName="@string/font_bold" />

            <nat.pink.base.customView.ExtEditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/hint_text_name"
                android:paddingStart="@dimen/_18sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:paddingVertical="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/color_9E9E9E"
                android:textSize="@dimen/_14sdp" />

            <nat.pink.base.customView.ExtTextView
                android:id="@+id/edt_error"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone"
                android:text="@string/please_fill_in_the_information"
                android:textColor="@color/color_FF3B30"
                android:textSize="@dimen/_11sdp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">


                    <nat.pink.base.customView.ExtTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/incoming_call_picture"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10sdp"
                        app:textViewFontAssetName="@string/font_regular" />

                    <FrameLayout
                        android:id="@+id/fr_incoming_call"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/iv_change_pic"
                            android:layout_width="@dimen/_80sdp"
                            android:layout_height="@dimen/_80sdp"
                            android:src="@drawable/ic_empty_image" />

                        <FrameLayout
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:layout_gravity="center"
                            android:background="@drawable/bg_circle_transparent_border">

                            <androidx.constraintlayout.utils.widget.ImageFilterView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:src="@drawable/ic_incoming_call_picture" />
                        </FrameLayout>

                    </FrameLayout>

                </androidx.appcompat.widget.LinearLayoutCompat>


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">


                    <nat.pink.base.customView.ExtTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/video_of_incoming_calls"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10sdp"
                        app:textViewFontAssetName="@string/font_regular" />

                    <FrameLayout
                        android:id="@+id/fr_video_incoming_call"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/iv_change_video"
                            android:layout_width="@dimen/_80sdp"
                            android:layout_height="@dimen/_80sdp"
                            android:src="@drawable/ic_empty_image" />

                        <FrameLayout
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:layout_gravity="center"
                            android:background="@drawable/bg_circle_transparent_border">

                            <androidx.constraintlayout.utils.widget.ImageFilterView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:src="@drawable/ic_choose_video" />
                        </FrameLayout>

                    </FrameLayout>

                </androidx.appcompat.widget.LinearLayoutCompat>


            </androidx.appcompat.widget.LinearLayoutCompat>

            <nat.pink.base.customView.ExtTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/call_later"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp"
                app:textViewFontAssetName="@string/font_bold" />

            <nat.pink.base.customView.ExtTextView
                android:id="@+id/txt_timer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_edit_text"
                android:drawableEnd="@drawable/ic_right_textview"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/_18sdp"
                android:paddingEnd="@dimen/_20sdp"
                android:text="@string/now"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>


</androidx.appcompat.widget.LinearLayoutCompat>