<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_splash"
    android:gravity="center"
    android:orientation="vertical"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:background="@drawable/bg_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_10sdp">

        <nat.pink.base.customView.ExtTextView
            android:id="@+id/ext_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center"
            android:text="@string/dialog_comment_title"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp"
            app:textViewFontAssetName="@string/font_bold" />

        <nat.pink.base.customView.ExtEditText
            android:id="@+id/edt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/hint_input_phone"
            android:inputType="number"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/color_9E9E9E"
            android:textSize="@dimen/_12sdp" />

        <nat.pink.base.customView.ExtTextView
            android:id="@+id/txt_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center"
            android:textColor="@color/carbon_red_a700"
            android:textSize="@dimen/_18sdp"
            android:visibility="gone"
            app:textViewFontAssetName="@string/font_bold" />

        <ImageView
            android:id="@+id/txt_ok"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@drawable/bg_button_save" />


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>


