<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_content"
    android:layout_width="match_parent"
    android:background="@color/gray_D9"
    android:layout_height="match_parent">

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:layout_width="match_parent"
        android:id="@+id/iv_content"
        android:layout_height="match_parent"
        android:src="@drawable/ic_menu_home"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_transparent"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_call"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_70sdp"
        android:layout_marginTop="@dimen/_120sdp"
        android:src="@drawable/ic_menu_home"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <nat.pink.base.customView.ExtTextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_call"
        app:textViewFontAssetName="@string/font_bold" />

    <nat.pink.base.customView.ExtTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_2sdp"
        android:text="@string/video_call_on_messenger"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_name"
        app:textViewFontAssetName="@string/font_regular" />

    <nat.pink.base.customView.ExtTextView
        android:id="@+id/txt_refuse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_55sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_marginBottom="@dimen/_33sdp"
        android:text="@string/refuse"
        android:textColor="@color/gray_D9"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:textViewFontAssetName="@string/font_regular" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_55sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:id="@+id/iv_refuse"
        android:src="@drawable/ic_refuse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/txt_refuse"
        app:layout_constraintLeft_toLeftOf="parent" />

    <nat.pink.base.customView.ExtTextView
        android:id="@+id/txt_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_55sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_marginBottom="@dimen/_33sdp"
        android:text="@string/answer"
        android:textAllCaps="true"
        android:textColor="@color/gray_D9"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:textViewFontAssetName="@string/font_regular" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_55sdp"
        android:id="@+id/iv_answer"
        android:layout_marginBottom="@dimen/_5sdp"
        android:src="@drawable/ic_answer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/txt_refuse"
        app:layout_constraintRight_toRightOf="parent" />

    <nat.pink.base.customView.ExtTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_140sdp"
        android:text="@string/answer"
        android:textColor="@color/white"
        android:id="@+id/txt_answer_content"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="@dimen/_4sdp"
        app:layout_constraintRight_toRightOf="parent"
        app:textViewFontAssetName="@string/font_regular" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:layout_width="wrap_content"
        android:layout_marginBottom="@dimen/_140sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="@dimen/_4sdp"
        android:src="@drawable/ic_answer_content"
        app:layout_constraintRight_toLeftOf="@+id/txt_answer_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>